  * Set V=1 rather than DH_VERBOSE=1, in line with Debian buildds and to
    cover some more build systems (see https://bugs.debian.org/751528).
  * Fix lpbuildd.livefs tests to account for the "suite" argument no longer
    being accepted.
  * Drop support for running binarypackage builds without a "suite"
    argument; Launchpad has passed this for all binarypackage builds since
    2007.

  [ Adam Conrad ]
  * scan-for-processes: Don't explode if one of the processes we were
    going to kill completes before we get around to killing it.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 14 Jul 2014 18:24:29 +0100

launchpad-buildd (124) hardy; urgency=medium

  [ Adam Conrad ]
  * Make launchpad-buildd more self-contained to avoid sbuild conflict:
    - Move our forked sbuild to /usr/share/launchpad-buildd/slavebin
    - Look for and use ~/.lp-sbuildrc instead of ~/.sbuildrc
    - Move /etc/sbuild.conf to /usr/share/launchpad-buildd/sbuild.conf
    - Move our internal helper binaries to /usr/share/launchpad-buildd
    - Remove now unnecessary lintian overrides for launchpad-buildd
  * Remove empty and obsolete /usr/share/launchpad-buildd/lpbuildd
  * Update Standards-Version, and switch Conflicts to Breaks/Replaces.
  * Remove instance configuration from /etc/launchpad-buildd/ on purge.

  [ Colin Watson ]
  * Install ltsp-server (but not its Recommends) for i386 livefs builds, as
    Edubuntu needs it.
  * Stop accepting the "suite" argument to livefs builds, now that Launchpad
    has been updated to use the newer series/pocket protocol.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 04 Jul 2014 16:24:26 +0100

launchpad-buildd (123) hardy; urgency=medium

  * Fix handling of livefs builds for the -proposed pocket.
  * Accept an "extra_ppas" entry in livefs arguments, which is passed to
    livecd-rootfs to request that the image be built against additional
    PPAs.

 -- Colin Watson <cjwatson@ubuntu.com>  Sun, 22 Jun 2014 16:10:44 +0100
